# daijinia-desktop

./: .gitignore  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: global.css
src/components/: Loading.tsx  NotTokenAllowed.tsx  Update.tsx
src/constants/: Settings.ts
src/scripts/: start.ts
src/services/: createChat.ts  getChats.ts  getComputerInfo.ts  getConfig.ts  getNeedInfos.ts  sendMessage.tsx
src/stores/: Store.ts
